build: explicitly add libavcodec deps
Feng uses few functions from it now.

--- a/configure.ac
+++ b/configure.ac
@@ -118,7 +118,7 @@ LIBS="$LIBS $GLIB_LIBS"
 avformat_msg="no"
 avutil_msg="no"
 if test "x$enable_libav" = "xyes"; then
-    PKG_CHECK_MODULES(LIBAVFORMAT,[libavformat >= 53.3.0],
+    PKG_CHECK_MODULES(LIBAVFORMAT,[libavformat >= 53.3.0 libavcodec],
         [AC_DEFINE(HAVE_AVFORMAT,,[Define if libavformat support is available])
          avformat_msg="yes"
          ])
